modified:   index.html 	modified:   manifest.json

--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
     "orientation": "portrait",
     "scope": "/",
     "start_url": "https://j-chor.github.io/Moje-pierwsze-PWA-/",
-    "description": "Moja PWA z WSB. Jeúli to czytasz jesteú super",
+    "description": "Moja PWA z WSB. Je≈ºeli to czytasz jeste≈õ super",
     "icons": [
         {
             "src": "./img/garlic.png",
